--- a/CricPredictor.ipynb
+++ b/CricPredictor.ipynb
@@ -6,7 +6,7 @@
       "name": "CricPredictor.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNbFptaTm+6lP1wI0vGzjaO",
+      "authorship_tag": "ABX9TyORf8dO0eCog7jSB6N9h3P+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +15,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -54,7 +53,7 @@
         "import glob\n",
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,7 +64,7 @@
       "source": [
         "train_parent = []"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -75,7 +74,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Wip7TAv5LLO",
-        "outputId": "2b3ec15a-3798-469c-c62d-22bb700306a7"
+        "outputId": "ea78e624-6262-4874-c069-a8db15a9bb21"
       },
       "source": [
         "DATASET_DIR = '/content/dataset/'\n",
@@ -85,16 +84,154 @@
         "  train_parent.append(df)\n",
         "train_parent = pd.concat(train_parent, axis=0, ignore_index=True)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "b'Skipping line 7: expected 1 fields, saw 3\\nSkipping line 10: expected 1 fields, saw 2\\nSkipping line 13: expected 1 fields, saw 3\\nSkipping line 26: expected 1 fields, saw 2\\nSkipping line 29: expected 1 fields, saw 2\\nSkipping line 30: expected 1 fields, saw 2\\nSkipping line 33: expected 1 fields, saw 2\\nSkipping line 37: expected 1 fields, saw 2\\nSkipping line 38: expected 1 fields, saw 2\\nSkipping line 39: expected 1 fields, saw 2\\nSkipping line 42: expected 1 fields, saw 4\\nSkipping line 47: expected 1 fields, saw 2\\nSkipping line 74: expected 1 fields, saw 4\\nSkipping line 78: expected 1 fields, saw 3\\nSkipping line 81: expected 1 fields, saw 2\\nSkipping line 84: expected 1 fields, saw 5\\nSkipping line 85: expected 1 fields, saw 2\\nSkipping line 88: expected 1 fields, saw 2\\nSkipping line 89: expected 1 fields, saw 3\\nSkipping line 92: expected 1 fields, saw 2\\nSkipping line 95: expected 1 fields, saw 2\\nSkipping line 924: expected 1 fields, saw 2\\nSkipping line 925: expected 1 fields, saw 3\\n'\n",
             "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (1) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-            "  interactivity=interactivity, compiler=compiler, result=result)\n",
-            "b'Skipping line 7: expected 1 fields, saw 3\\nSkipping line 10: expected 1 fields, saw 2\\nSkipping line 13: expected 1 fields, saw 3\\nSkipping line 26: expected 1 fields, saw 2\\nSkipping line 29: expected 1 fields, saw 2\\nSkipping line 30: expected 1 fields, saw 2\\nSkipping line 33: expected 1 fields, saw 2\\nSkipping line 37: expected 1 fields, saw 2\\nSkipping line 38: expected 1 fields, saw 2\\nSkipping line 39: expected 1 fields, saw 2\\nSkipping line 42: expected 1 fields, saw 4\\nSkipping line 47: expected 1 fields, saw 2\\nSkipping line 74: expected 1 fields, saw 4\\nSkipping line 78: expected 1 fields, saw 3\\nSkipping line 81: expected 1 fields, saw 2\\nSkipping line 84: expected 1 fields, saw 5\\nSkipping line 85: expected 1 fields, saw 2\\nSkipping line 88: expected 1 fields, saw 2\\nSkipping line 89: expected 1 fields, saw 3\\nSkipping line 92: expected 1 fields, saw 2\\nSkipping line 95: expected 1 fields, saw 2\\nSkipping line 924: expected 1 fields, saw 2\\nSkipping line 925: expected 1 fields, saw 3\\n'\n"
+            "  interactivity=interactivity, compiler=compiler, result=result)\n"
           ],
           "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        },
+        "id": "Ij56TGtgDl4P",
+        "outputId": "55cd59f6-e62d-471f-9b79-e17f4bdd8ca6"
+      },
+      "source": [
+        "train_parent[['striker', 'runs_off_bat', 'bowler']]"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>striker</th>\n",
+              "      <th>runs_off_bat</th>\n",
+              "      <th>bowler</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Mandeep Singh</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>A Chandila</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Mandeep Singh</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>A Chandila</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Mandeep Singh</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>A Chandila</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>SE Marsh</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>A Chandila</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SE Marsh</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>A Chandila</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>389591</th>\n",
+              "      <td>V Kohli</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>AB McDonald</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>389592</th>\n",
+              "      <td>V Kohli</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>AB McDonald</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>389593</th>\n",
+              "      <td>V Kohli</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>AB McDonald</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>389594</th>\n",
+              "      <td>DW Steyn</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>AB McDonald</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>389595</th>\n",
+              "      <td>A Kumble</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>AB McDonald</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>389596 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              striker  runs_off_bat       bowler\n",
+              "0       Mandeep Singh           0.0   A Chandila\n",
+              "1       Mandeep Singh           0.0   A Chandila\n",
+              "2       Mandeep Singh           0.0   A Chandila\n",
+              "3            SE Marsh           0.0   A Chandila\n",
+              "4            SE Marsh           0.0   A Chandila\n",
+              "...               ...           ...          ...\n",
+              "389591        V Kohli           4.0  AB McDonald\n",
+              "389592        V Kohli           6.0  AB McDonald\n",
+              "389593        V Kohli           1.0  AB McDonald\n",
+              "389594       DW Steyn           0.0  AB McDonald\n",
+              "389595       A Kumble           1.0  AB McDonald\n",
+              "\n",
+              "[389596 rows x 3 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
         }
       ]
     },
