--- a/CricPredictor.ipynb
+++ b/CricPredictor.ipynb
@@ -6,7 +6,7 @@
       "name": "CricPredictor.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORf8dO0eCog7jSB6N9h3P+",
+      "authorship_tag": "ABX9TyOYgOzGnjJYPVkVd3c2YfWh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,10 @@
         "import numpy as np\n",
         "import os\n",
         "import glob\n",
-        "from sklearn.linear_model import LinearRegression"
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.preprocessing import LabelEncoder, MinMaxScaler"
       ],
-      "execution_count": 2,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -234,6 +235,91 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BSlM0RMKE04k"
+      },
+      "source": [
+        "# **Checking with limited features**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a3vZ3kwOEyqr",
+        "outputId": "6cf1c601-1fc0-40fb-b7ea-8e8e361dbe76"
+      },
+      "source": [
+        "featured_df = train_parent[['striker', 'runs_off_bat', 'bowler']]\n",
+        "featured_df = featured_df.dropna()\n",
+        "bat_encoder = LabelEncoder()\n",
+        "bat_encoder.fit(list(np.array(featured_df[['striker']]).flatten()))\n",
+        "bowl_encoder = LabelEncoder()\n",
+        "bowl_encoder.fit(list(np.array(featured_df[['bowler']]).flatten()))\n",
+        "featured_df[['striker']] = pd.DataFrame(np.array(bat_encoder.transform(featured_df[['striker']]), dtype='int32'))\n",
+        "featured_df[['bowler']] = pd.DataFrame(np.array(bowl_encoder.transform(featured_df[['bowler']]), dtype='int32'))\n",
+        "featured_df = featured_df.dropna()"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/preprocessing/_label.py:268: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-xCXqSe2FoMq",
+        "outputId": "998ce8fa-c83c-4dfa-8789-fd90425861bc"
+      },
+      "source": [
+        "scaler = MinMaxScaler()\n",
+        "X_train = np.array(featured_df.drop(columns=['runs_off_bat']))\n",
+        "Y_train = np.array(featured_df[['runs_off_bat']])\n",
+        "scaler.fit_transform(X_train, Y_train)\n",
+        "regressor = LinearRegression()\n",
+        "regressor.fit(X_train, Y_train)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U5VIHAYBSDK2"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
