--- a/CricPredictor.ipynb
+++ b/CricPredictor.ipynb
@@ -6,7 +6,8 @@
       "name": "CricPredictor.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJgkNc5r+C492b+wZNADL0",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPzSEHpHP9glWdt3qyloPac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,13 +55,17 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.preprocessing import LabelEncoder, MinMaxScaler"
       ],
-      "execution_count": 38,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Wip7TAv5LLO"
+        "id": "7Wip7TAv5LLO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3adf535f-d708-430f-9e8e-01e5726adb25"
       },
       "source": [
         "train_parent = []\n",
@@ -71,8 +76,159 @@
         "  train_parent.append(df)\n",
         "train_parent = pd.concat(train_parent, axis=0, ignore_index=True)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (1) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "  interactivity=interactivity, compiler=compiler, result=result)\n",
+            "b'Skipping line 7: expected 1 fields, saw 3\\nSkipping line 10: expected 1 fields, saw 2\\nSkipping line 13: expected 1 fields, saw 3\\nSkipping line 26: expected 1 fields, saw 2\\nSkipping line 29: expected 1 fields, saw 2\\nSkipping line 30: expected 1 fields, saw 2\\nSkipping line 33: expected 1 fields, saw 2\\nSkipping line 37: expected 1 fields, saw 2\\nSkipping line 38: expected 1 fields, saw 2\\nSkipping line 39: expected 1 fields, saw 2\\nSkipping line 42: expected 1 fields, saw 4\\nSkipping line 47: expected 1 fields, saw 2\\nSkipping line 74: expected 1 fields, saw 4\\nSkipping line 78: expected 1 fields, saw 3\\nSkipping line 81: expected 1 fields, saw 2\\nSkipping line 84: expected 1 fields, saw 5\\nSkipping line 85: expected 1 fields, saw 2\\nSkipping line 88: expected 1 fields, saw 2\\nSkipping line 89: expected 1 fields, saw 3\\nSkipping line 92: expected 1 fields, saw 2\\nSkipping line 95: expected 1 fields, saw 2\\nSkipping line 924: expected 1 fields, saw 2\\nSkipping line 925: expected 1 fields, saw 3\\n'\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        },
+        "id": "unUL1XBnLpAP",
+        "outputId": "1bb94586-b300-4476-a7af-a0667ac97414"
+      },
+      "source": [
+        "train_parent = train_parent.drop(columns=['All Indian Premier League match data in CSV format'])\n",
+        "d = {'runs_off_bat': 'sum'}\n",
+        "train_parent = train_parent.groupby(['match_id','innings', 'striker', 'bowler'], as_index=False).aggregate(d)\n",
+        "train_parent.drop(columns=['match_id', 'innings'])"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>striker</th>\n",
+              "      <th>bowler</th>\n",
+              "      <th>runs_off_bat</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>BB McCullum</td>\n",
+              "      <td>AA Noffke</td>\n",
+              "      <td>48.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BB McCullum</td>\n",
+              "      <td>CL White</td>\n",
+              "      <td>32.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>BB McCullum</td>\n",
+              "      <td>JH Kallis</td>\n",
+              "      <td>64.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>BB McCullum</td>\n",
+              "      <td>P Kumar</td>\n",
+              "      <td>64.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>BB McCullum</td>\n",
+              "      <td>SB Joshi</td>\n",
+              "      <td>42.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40098</th>\n",
+              "      <td>Mohammad Nabi</td>\n",
+              "      <td>Shakib Al Hasan</td>\n",
+              "      <td>4.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40099</th>\n",
+              "      <td>V Shankar</td>\n",
+              "      <td>AD Russell</td>\n",
+              "      <td>6.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40100</th>\n",
+              "      <td>V Shankar</td>\n",
+              "      <td>CV Varun</td>\n",
+              "      <td>16.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40101</th>\n",
+              "      <td>WP Saha</td>\n",
+              "      <td>Harbhajan Singh</td>\n",
+              "      <td>14.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40102</th>\n",
+              "      <td>WP Saha</td>\n",
+              "      <td>Shakib Al Hasan</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>40103 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             striker           bowler  runs_off_bat\n",
+              "0        BB McCullum        AA Noffke          48.0\n",
+              "1        BB McCullum         CL White          32.0\n",
+              "2        BB McCullum        JH Kallis          64.0\n",
+              "3        BB McCullum          P Kumar          64.0\n",
+              "4        BB McCullum         SB Joshi          42.0\n",
+              "...              ...              ...           ...\n",
+              "40098  Mohammad Nabi  Shakib Al Hasan           4.0\n",
+              "40099      V Shankar       AD Russell           6.0\n",
+              "40100      V Shankar         CV Varun          16.0\n",
+              "40101        WP Saha  Harbhajan Singh          14.0\n",
+              "40102        WP Saha  Shakib Al Hasan           0.0\n",
+              "\n",
+              "[40103 rows x 3 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -105,7 +261,7 @@
         "featured_df = featured_df.dropna()\n",
         "featured_df"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +409,7 @@
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train, Y_train)"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +437,7 @@
       "source": [
         "sum(regressor.predict(X_train))"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,16 +456,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "sij16PLIZbYc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "sij16PLIZbYc",
         "outputId": "1b8b2a38-c266-45bd-a788-45a2cf9e10f3"
       },
       "source": [
         "sum(Y_train)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
