--- a/CricPredictor.ipynb
+++ b/CricPredictor.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOFJXORync/A/0x4xT906iq",
+      "authorship_tag": "ABX9TyNBFMMqnx1CaFVj2BdWuNDC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 139,
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_oo0ozKpdgV0",
-        "outputId": "850590e6-4a0f-4824-b131-7b490b5191a3"
+        "outputId": "906cba05-10b3-41bd-f04f-209b4264dc49"
       },
       "source": [
         "people_encoder = LabelEncoder()\n",
@@ -92,7 +92,7 @@
         "people = list(set(people))\n",
         "people_encoder.fit(people)"
       ],
-      "execution_count": 141,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -104,9 +104,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 141
+          "execution_count": 147
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "unUL1XBnLpAP"
+      },
+      "source": [
+        "train_parent = train_parent.drop(columns=['All Indian Premier League match data in CSV format'])\n",
+        "d = {'runs_off_bat': 'sum', 'striker':', '.join, 'bowler':', '.join}\n",
+        "train_parent = train_parent.groupby(['match_id','innings'], as_index=False).aggregate(d)"
+      ],
+      "execution_count": 148,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -115,168 +128,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 402
         },
-        "id": "unUL1XBnLpAP",
-        "outputId": "39195484-cf4a-4299-eb83-fb8464e2e24f"
-      },
-      "source": [
-        "train_parent = train_parent.drop(columns=['All Indian Premier League match data in CSV format'])\n",
-        "d = {'runs_off_bat': 'sum', 'striker':', '.join, 'bowler':', '.join}\n",
-        "train_parent = train_parent.groupby(['match_id','innings'], as_index=False).aggregate(d)\n",
-        "train_parent"
-      ],
-      "execution_count": 142,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>match_id</th>\n",
-              "      <th>innings</th>\n",
-              "      <th>runs_off_bat</th>\n",
-              "      <th>striker</th>\n",
-              "      <th>bowler</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>335982.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>410.0</td>\n",
-              "      <td>SC Ganguly, BB McCullum, BB McCullum, BB McCul...</td>\n",
-              "      <td>P Kumar, P Kumar, P Kumar, P Kumar, P Kumar, P...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>335982.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>126.0</td>\n",
-              "      <td>R Dravid, W Jaffer, W Jaffer, W Jaffer, R Drav...</td>\n",
-              "      <td>AB Dinda, AB Dinda, AB Dinda, AB Dinda, AB Din...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>335983.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>468.0</td>\n",
-              "      <td>PA Patel, PA Patel, PA Patel, ML Hayden, ML Ha...</td>\n",
-              "      <td>B Lee, B Lee, B Lee, B Lee, B Lee, B Lee, S Sr...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>335983.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>392.0</td>\n",
-              "      <td>K Goel, K Goel, K Goel, K Goel, JR Hopes, JR H...</td>\n",
-              "      <td>JDP Oram, JDP Oram, JDP Oram, JDP Oram, JDP Or...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>335984.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>244.0</td>\n",
-              "      <td>T Kohli, T Kohli, T Kohli, T Kohli, T Kohli, T...</td>\n",
-              "      <td>GD McGrath, GD McGrath, GD McGrath, GD McGrath...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1659</th>\n",
-              "      <td>1254058.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>296.0</td>\n",
-              "      <td>Washington Sundar, Washington Sundar, Washingt...</td>\n",
-              "      <td>TA Boult, TA Boult, TA Boult, TA Boult, TA Bou...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1660</th>\n",
-              "      <td>1254059.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>356.0</td>\n",
-              "      <td>RD Gaikwad, RD Gaikwad, RD Gaikwad, RD Gaikwad...</td>\n",
-              "      <td>CR Woakes, CR Woakes, CR Woakes, CR Woakes, CR...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1661</th>\n",
-              "      <td>1254059.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>372.0</td>\n",
-              "      <td>PP Shaw, PP Shaw, PP Shaw, S Dhawan, S Dhawan,...</td>\n",
-              "      <td>DL Chahar, DL Chahar, DL Chahar, DL Chahar, DL...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1662</th>\n",
-              "      <td>1254060.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>360.0</td>\n",
-              "      <td>N Rana, N Rana, N Rana, N Rana, N Rana, N Rana...</td>\n",
-              "      <td>B Kumar, B Kumar, B Kumar, B Kumar, B Kumar, B...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1663</th>\n",
-              "      <td>1254060.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>340.0</td>\n",
-              "      <td>WP Saha, WP Saha, WP Saha, DA Warner, WP Saha,...</td>\n",
-              "      <td>Harbhajan Singh, Harbhajan Singh, Harbhajan Si...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>1664 rows × 5 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       match_id  ...                                             bowler\n",
-              "0      335982.0  ...  P Kumar, P Kumar, P Kumar, P Kumar, P Kumar, P...\n",
-              "1      335982.0  ...  AB Dinda, AB Dinda, AB Dinda, AB Dinda, AB Din...\n",
-              "2      335983.0  ...  B Lee, B Lee, B Lee, B Lee, B Lee, B Lee, S Sr...\n",
-              "3      335983.0  ...  JDP Oram, JDP Oram, JDP Oram, JDP Oram, JDP Or...\n",
-              "4      335984.0  ...  GD McGrath, GD McGrath, GD McGrath, GD McGrath...\n",
-              "...         ...  ...                                                ...\n",
-              "1659  1254058.0  ...  TA Boult, TA Boult, TA Boult, TA Boult, TA Bou...\n",
-              "1660  1254059.0  ...  CR Woakes, CR Woakes, CR Woakes, CR Woakes, CR...\n",
-              "1661  1254059.0  ...  DL Chahar, DL Chahar, DL Chahar, DL Chahar, DL...\n",
-              "1662  1254060.0  ...  B Kumar, B Kumar, B Kumar, B Kumar, B Kumar, B...\n",
-              "1663  1254060.0  ...  Harbhajan Singh, Harbhajan Singh, Harbhajan Si...\n",
-              "\n",
-              "[1664 rows x 5 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 142
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uArvinOAUhIf"
+        "id": "uArvinOAUhIf",
+        "outputId": "c21ff716-adcd-492a-942a-5432de34f3cc"
       },
       "source": [
         "strikers = train_parent['striker'].values\n",
@@ -292,25 +145,10 @@
         "  st = list(set(st))\n",
         "  bw_unique.append(', '.join(st))\n",
         "train_parent['striker'] = pd.DataFrame(bt_unique)\n",
-        "train_parent['bowler'] = pd.DataFrame(bw_unique)"
-      ],
-      "execution_count": 143,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 402
-        },
-        "id": "bsVr0CAAcM7y",
-        "outputId": "80a6bc9d-effa-4cbf-de88-ac843d21ec94"
-      },
-      "source": [
+        "train_parent['bowler'] = pd.DataFrame(bw_unique)\n",
         "train_parent.drop(columns=['match_id', 'innings'])"
       ],
-      "execution_count": 144,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,20 +269,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 144
+          "execution_count": 149
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zA8Imr1FZeM2"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
